<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account_fragment"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/devices_fragment"
            android:icon="@drawable/ic_outline_contactless_24"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/pair_activity"
            android:icon="@drawable/ic_menu_pair"
            android:title="@string/menu_pair" />
        <item
            android:id="@+id/about_fragment"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
    </group>
</menu>
