<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="0dp"
    android:padding="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="2"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:text="@string/ssid" />

    <TextView
        android:id="@+id/ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:paddingLeft="5dp"
        android:text="@string/na"
        android:paddingStart="5dp" />

    <ImageView
        android:id="@+id/wifiSignalStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:layout_column="2"
        android:layout_gravity="fill_vertical"
        android:contentDescription="@string/wifi_signal_strength"
        android:padding="10dp"
        android:src="@drawable/ic_signal_wifi_0_bar_black_24dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:text="@string/bssid" />

    <TextView
        android:id="@+id/bssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:paddingLeft="5dp"
        android:text="@string/na"
        android:paddingStart="5dp" />
</GridLayout>

