<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.pair.FetchDeviceInfoFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/scan_fragment_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.albertogeniola.merossconf.ui.views.TaskLine
        android:id="@+id/connectWifiTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:state="not_started"
        app:title="@string/connecting_to_ap" />

    <com.albertogeniola.merossconf.ui.views.TaskLine
        android:id="@+id/fetchDeviceInfoTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/connectWifiTask"
        app:layout_constraintStart_toStartOf="@+id/connectWifiTask"
        app:layout_constraintTop_toBottomOf="@+id/connectWifiTask"
        app:state="not_started"
        app:title="@string/fetching_device_info" />

    <com.albertogeniola.merossconf.ui.views.TaskLine
        android:id="@+id/scanWifiTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/fetchDeviceInfoTask"
        app:layout_constraintStart_toStartOf="@+id/fetchDeviceInfoTask"
        app:layout_constraintTop_toBottomOf="@+id/fetchDeviceInfoTask"
        app:state="not_started"
        app:title="@string/scanning_wifi" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="195dp"
        android:layout_height="235dp"
        android:src="@drawable/satellite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>